# usrp_rxtx

./: .gitignore  .gitmodules  Makefile  README.md  meson.build
config/: b205_rx.cfg  b205_rxtx.cfg  b205_tx.cfg  x310_twinrx_xg.cfg  x310_ubx_hg.cfg  x310_ubx_xg.cfg
src/: config.cfg  config.cpp  config.hpp  error.hpp  json.hpp  logging.cpp  logging.hpp  main.cpp  mpsc.hpp  mqtt.cpp  mqtt.hpp  ringbuf.cpp  ringbuf.h  ringbuf.hpp  rx.cpp  rx.hpp  sync.cpp  sync.hpp  tty.hpp  tx.cpp  tx.hpp  version.hpp  version.sh  wr.cpp  wr.hpp
subprojects/mosquitto/: meson.build
test/: test.hpp  test_config.cpp  test_dummy.cpp  test_json.cpp  test_mpsc.cpp  test_ringbuf.cpp
utils/fs740/etc/systemd/system/: fs740_mobile@.service  fs740_stationary@.service
utils/fs740/opt/fs740/: fs740.py
utils/hwmon/etc/systemd/system/: hwmon.service
utils/hwmon/opt/hwmon/: hwmon.py
utils/lc_xo/etc/systemd/system/: lc_xo@.service
utils/lc_xo/opt/lc_xo/: lc_xo.py
utils/ntrip2mqtt/etc/systemd/system/: ntrip2mqtt.service
utils/ntrip2mqtt/opt/ntrip2mqtt/: ntrip2mqtt.py  ntrip_client.py
utils/rtk/etc/systemd/system/: rtk@.service
utils/rtk/etc/udev/rules.d/: rtk.rules
utils/rtk/opt/rtk/: f9p_rover.conf  f9p_rover.py  ubx_parser.py
